# pods

./: .editorconfig  .gitignore  .gitlab-ci.yml  .typos.toml  CODE_OF_CONDUCT.md  Cargo.toml  Pods.doap  README.md  deny.toml  meson.build  meson_options.txt
src/: api.rs  application.rs  config.rs.in  images.rs  main.rs  meson.build  podman.rs  resources.gresource.xml  rt.rs  search_provider.rs  utils.rs  window.rs  window.ui
src/engine/: auth.rs  conn.rs  container_inspection.rs  container_summary.rs  event.rs  image_summary.rs  info.rs  mod.rs  podman.rs  volume.rs
src/engine/api/: container.rs  containers.rs  exec.rs  image.rs  images.rs  mod.rs  pod.rs  pods.rs  volume.rs  volumes.rs
src/engine/dto/: container.rs  container_stats.rs  event.rs  image.rs  image_build_report.rs  image_history_entry.rs  image_pull_report.rs  image_push_report.rs  image_search_response_item.rs  info.rs  mod.rs  pod.rs  pods_prune_report.rs  port_mapping.rs  prune_report.rs  top.rs  volume.rs
src/engine/opts/: container_commit_opts.rs  container_create_opts.rs  containers_prune_opts.rs  exec_create_opts.rs  image_build_opts.rs  image_pull_opts.rs  image_push_opts.rs  images_prune_opts.rs  log_opts.rs  mod.rs  pod_create_opts.rs  volume_create_opts.rs  volumes_prune_opts.rs
src/model/: abstract_action.rs  abstract_container_list.rs  action.rs  action_list.rs  action_list2.rs  action_state.rs  artifact_action.rs  client.rs  cmd_arg.rs  connection.rs  connection_manager.rs  container.rs  container_commit_action.rs  container_copy_from_action.rs  container_copy_to_action.rs  container_create_action.rs  container_creation.rs  container_data.rs  container_details.rs  container_health_status.rs  container_list.rs  container_restart_policy.rs  container_status.rs  container_volume.rs  container_volume_list.rs  containers_prune_action.rs  device.rs  engine.rs  engine_capabilities.rs  engine_type.rs  env_var.rs  health_check_log.rs  health_check_log_list.rs  image.rs  image_build_action.rs  image_config.rs  image_data.rs  image_details.rs  image_list.rs  image_pull.rs  (+37 more)
src/view/: action_dialog.blp  action_dialog.rs  action_page.blp  action_page.rs  action_page.ui  action_row.blp  action_row.rs  action_row.ui  actions_button.blp  actions_button.rs  actions_button.ui  actions_sidebar.blp  actions_sidebar.rs  actions_sidebar.ui  back_navigation_controls.rs  check_service_page.rs  circular_progress_bar.rs  client_view.blp  client_view.rs  client_view.ui  connection.rs  connection_chooser_page.blp  connection_chooser_page.rs  connection_chooser_page.ui  connection_creation_page.blp  connection_creation_page.rs  connection_creation_page.ui  connection_custom_info_dialog.rs  connection_custom_info_dialog.ui  connection_custom_info_page.blp  connection_custom_info_page.rs  connection_custom_info_page.ui  connection_lost_page.rs  connection_row.blp  connection_row.rs  connection_row.ui  connection_switcher.rs  connection_switcher.ui  connections_sidebar.blp  connections_sidebar.rs  (+338 more)
src/view/action/: mod.rs  page.rs  row.rs
src/view/actions/: menu_button.rs  mod.rs  overview.rs  sidebar.rs
src/view/cmd_arg/: row.rs
src/view/component/: back_navigation_controls.rs  circular_progress_bar.rs  count_badge.rs  efficient_spinner.rs  inspection_page.rs  leaflet_overlay.rs  mod.rs  play_kube_file_page.rs  property_row.rs  property_widget_row.rs  prune_until_row.rs  random_name_entry_row.rs  scalable_text_view.rs  scalable_text_view_page.rs  source_view_page.rs  source_view_search_widget.rs  spinner.rs  text_search_entry.rs  top_page.rs  zoom_control.rs
src/view/connection/: chooser_page.rs  connection_chooser_page.rs  connection_creator_page.rs  connection_row.rs  connection_switcher_popup.rs  connection_switcher_widget.rs  creation_page.rs  creator_page.rs  custom_info_dialog.rs  mod.rs  row.rs  sidebar.rs  switcher.rs  switcher_widget.rs
src/view/container/: commit_page.rs  container_creation_dialog.rs  container_creation_page.rs  container_details_page.rs  container_details_panel.rs  container_health_check_log_row.rs  container_health_check_page.rs  container_log_page.rs  container_logs_panel.rs  container_menu_button.rs  container_page.rs  container_processes_page.rs  container_properties_group.rs  container_rename_dialog.rs  container_resources_quick_reference_group.rs  container_row.rs  container_row_simple.rs  containers_count_bar.rs  containers_group.rs  containers_panel.rs  creation_page.rs  details_page.rs  env_var_row.rs  files_get_page.rs  files_put_page.rs  health_check_page.rs  log_page.rs  menu_button.rs  mod.rs  port_mapping_row.rs  properties_group.rs  rename_dialog.rs  resources_quick_reference_group.rs  row.rs  tty.rs  tty_page.rs  volume_row.rs
src/view/containers/: count_bar.rs  group.rs  mod.rs  panel.rs  prune_page.rs
src/view/device/: row.rs
src/view/env_var/: row.rs
src/view/health_check_log/: mod.rs  row.rs
src/view/image/: build_page.rs  building_page.rs  details_page.rs  history_page.rs  image_build_page.rs  image_building_page.rs  image_details_page.rs  image_menu_button.rs  image_pull_dialog.rs  image_pull_page.rs  image_pulling_page.rs  image_row.rs  image_row_simple.rs  image_search_response_row.rs  (+14 more)
src/widget/: action_state_indicator.blp  action_state_indicator.rs  auto_scrolled_window.blp  auto_scrolled_window.rs  back_navigation_controls.rs  circular_progress_bar.blp  circular_progress_bar.rs  circular_progress_bar.ui  count_badge.blp  count_badge.rs  count_badge.ui  date_time_row.blp  date_time_row.rs  date_time_row.ui  efficient_spinner.rs  efficient_spinner.ui  leaflet_overlay.rs  main_menu_button.blp  main_menu_button.rs  main_menu_button.ui  mod.rs  property_row.blp  property_row.rs  property_row.ui  property_widget_row.blp  property_widget_row.rs  property_widget_row.ui  random_name_entry_row.blp  random_name_entry_row.rs  random_name_entry_row.ui  scalable_text_view.rs  separator_row.rs  separator_row.ui  source_view_search_widget.blp  source_view_search_widget.rs  source_view_search_widget.ui  spinner.blp  spinner.rs  spinner.ui  suggestion_entry_row.blp  (+6 more)
(+260 files in other folders)
