[package]
name = "pods"
version = "2.4.0"
authors = ["Marcus Behrendt <marcus.behrendt.86@gmail.com>"]
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
astral-tokio-tar = { version = "0.6", default-features = false }
adw = { version = "0.9", package = "libadwaita", features = ["v1_9"] }
anyhow = "1"
ashpd = { version = "0.13", default-features = false, features = ["account", "file_chooser", "gtk4", "notification", "tokio"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
gettext-rs = { version = "=0.7.0", features = ["gettext-system"] }
gtk = { version = "0.11", package = "gtk4", features = ["gnome_49"] }
indexmap = { version = "2", features = ["serde"] }
log = "0.4"
multi_log = "0.1"
names = { version = "0.14", default-features = false }
oo7 = { version = "0.6", default-features = false, features = ["native_crypto", "tokio"] }
pastey = "0.2"
podman-api = { version = "0.11", default-features = false }
serde = "1"
serde_json = "1"
simplelog = { version = "0.12", features = ["paris"] }
sourceview5 = { version = "0.11" }
syslog = "7"
tokio = "1"
tokio-stream = { version = "0.1", default-features = false }
vte = { version = "0.15", default-features = false }
vte4 = "0.10"

hyper = { version = "1", features = ["client", "http1"] }
hyper-util = "0.1"
hyperlocal = {version = "0.9", default-features = false, features = ["client"] }
http-body-util = "0.1"

[profile.release]
lto = true
codegen-units = 1
